--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -343,6 +343,7 @@
 - date: 4/16/19
   discussion: '- [Disc10](assets/discussions/disc10/disc10.pdf)
 
+  - [Solutions](assets/discussions/disc10/disc10_sol.pdf)
   '
   topic: "Prediction: Classification and Regression"
   slides: assets/lectures/prediction.pdf
