--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -10,7 +10,7 @@
 - date: 4/19/2019
   text: |
      - [Project 3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj3/proj3.ipynb) is due Thursday 5/2 @ 11:59pm.
-
+     - [Midterm 2](assets/exams/data100-sp19-mt2.pdf) and [solutions](assets/exams/data100-sp19-mt2-sol.pdf) are posted.
 - date: 4/6/2019
   text: |
     - [Lab10](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab10/lab10.ipynb) and [Vitamin 10](https://gradescope.com) are due Wednesday 4/10 @ 11:59pm.
