--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,10 +7,17 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 4/22/2019
+  text: |
+     - [Lab11](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab11/lab11.ipynb) and [Vitamin 11](https://gradescope.com) are due Wednesday 4/24 @ 11:59pm.
+     - [Project 3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj3/proj3.ipynb) is due Thursday 5/2 @ 11:59pm.
+     - [Midterm 2](assets/exams/data100-sp19-mt2.pdf) and [solutions](assets/exams/data100-sp19-mt2-sol.pdf) are posted.
+
 - date: 4/19/2019
   text: |
      - [Project 3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj3/proj3.ipynb) is due Thursday 5/2 @ 11:59pm.
      - [Midterm 2](assets/exams/data100-sp19-mt2.pdf) and [solutions](assets/exams/data100-sp19-mt2-sol.pdf) are posted.
+
 - date: 4/6/2019
   text: |
     - [Lab10](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab10/lab10.ipynb) and [Vitamin 10](https://gradescope.com) are due Wednesday 4/10 @ 11:59pm.
