--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -383,6 +383,7 @@
   homework: '
     [HW 7](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw7/hw7.ipynb) (due 5/03)
     '
+  slides: https://docs.google.com/presentation/d/1jaF-fKu4e2sG5YrfiD7-rCiaGzHo0j6EhplGu2xL_bc/edit?usp=sharing
 - date: 4/30/19
   homework: HW7
   topic: Ethics of Data Science (Guest)
