--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -366,7 +366,12 @@
 
     '
 - date: 4/23/19
-  discussion: Disc11
+  discussion: '- [Disc11](assets/discussions/disc11/disc11.pdf)
+  
+  - [Demo](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=disc/parallel_sort.ipynb)
+  
+  - [Solutions](assets/discussions/disc11/disc11_sol.pdf)
+  '
   lab: '- [Lab11](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab11/lab11.ipynb)
     (due 4/24)
   '
