--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -9,7 +9,7 @@
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
 - date: 4/26/2019
   text: |
-     - [HW 7](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw7/hw7.ipynb) released! It will be due 05/03, 11:59PM
+     - [HW 7](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw7/hw7.ipynb) deadline extended to Monday 05/06, 11:59PM.
      - [Project 3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj3/proj3.ipynb) is due Thursday 5/2 @ 11:59pm.
      - [Joshua Kroll](https://www.ischool.berkeley.edu/people/joshua-kroll) guest lecture on Tuesday 4/30
 - date: 4/23/2019
