--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -367,9 +367,9 @@
     '
 - date: 4/23/19
   discussion: '- [Disc11](assets/discussions/disc11/disc11.pdf)
-  
+
   - [Demo](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=disc/parallel_sort.ipynb)
-  
+
   - [Solutions](assets/discussions/disc11/disc11_sol.pdf)
   '
   lab: '- [Lab11](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab11/lab11.ipynb)
@@ -393,6 +393,7 @@
   topic: Ethics of Data Science (Guest)
 - date: 5/2/19
   topic: Review and Conclusion
+  slides: https://docs.google.com/presentation/d/1ma6X9gZXMu-75Yyx7QwBtpOF_zP9IM-221sAWRx8KTY/edit?usp=sharing
 - date: 5/7/19
   homework: null
   topic: RRR week
