--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -306,6 +306,7 @@
     (due 4/16 @ 6pm)
     
     - [Solutions](https://github.com/DS-100/sp19/blob/master/proj/proj2/proj2_sol/proj2.ipynb)
+    
     '
   lab: '- [Lab9](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=labs/lab09/lab09.ipynb)
     (due 4/3)
@@ -372,6 +373,8 @@
   homework: '
   - [Proj3](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=proj/proj3/proj3.ipynb)
     (due 5/2 @ 11:59pm)
+    
+    - [Solutions](https://github.com/DS-100/sp19/blob/master/proj/proj3/proj3_sol/proj3.ipynb)
 
     '
   slides: https://docs.google.com/presentation/d/1qu2E72KC5wPFW-3ZX6MOB43ft7JjYmBSmX80pSSz3nc/edit?usp=sharing
