--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,6 +7,9 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
+- date: 5/13/2019
+  text: |
+     - Good luck on the final!
 - date: 5/3/2019
   text: |
      - [HW 7](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw7/hw7.ipynb) deadline extended to Monday 05/06, 11:59PM.
