--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -411,7 +411,10 @@
   topic: Distributed Computing (Guest)
   homework: '
   - [HW7](http://data100.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/DS-100/sp19&subPath=hw/hw7/hw7.ipynb) (**extended** due 5/6 @ 11:59pm)
-    '
+  
+  - [Solutions](https://github.com/DS-100/sp19/blob/master/hw/hw7/hw7_sol/hw7.ipynb)
+  
+  '
   slides: https://docs.google.com/presentation/d/1jaF-fKu4e2sG5YrfiD7-rCiaGzHo0j6EhplGu2xL_bc/edit?usp=sharing
 - date: 4/30/19
   discussion: '- [Disc12](assets/discussions/disc12/disc12.pdf)
